--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 {
 	"files.eol": "\n",
 	"debug.openDebug": "neverOpen",
+	"python.analysis.typeCheckingMode": "basic",
 	//"python.linting.enabled": false,
 	//"python.languageServer": "None"
 }
